--- a/frontend/index-aot-gzip.html
+++ b/frontend/index-aot-gzip.html
@@ -3,10 +3,11 @@
 
 <head>
 	<base href="/">
-	<title>Angular Tour of Heroes</title>
+  <title>Insta App</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 	<script src="dist/shim.min.js.gz"></script>
 	<script src="dist/zone.js.gz"></script>
 
