--- a/frontend/index-aot.html
+++ b/frontend/index-aot.html
@@ -4,10 +4,11 @@
 
 <head>
 	<base href="/">
-	<title>Angular Tour of Heroes</title>
+	<title>Insta App</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 	<script src="node_modules/core-js/client/shim.min.js"></script>
 	<script src="node_modules/zone.js/dist/zone.js"></script>
 
