--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,24 +1,28 @@
-
 <!DOCTYPE html>
 <html>
-
 <head>
-	<base href="/">
-	<title>Angular Tour of Heroes</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <title>Insta App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="styles.css">
-	<script src="node_modules/core-js/client/shim.min.js"></script>
-	<script src="node_modules/zone.js/dist/zone.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- #docregion moduleId -->
-	<script>window.module = 'aot';</script>
-	<!-- #enddocregion moduleId -->
+  <!-- IE required polyfills, in this exact order -->
+  <script src="node_modules/core-js/client/shim.min.js"></script>
+  <script src="node_modules/zone.js/dist/zone.js"></script>
+  <script src="node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+  <script>
+    System.import('system-config.js').then(function () {
+        System.import('main');
+      }).catch(console.error.bind(console));
+  </script>
 </head>
 
 <body>
-	<my-app>Loading...</my-app>
+  <my-app>Loading...</my-app>
 </body>
-<script src="dist/build.js"></script>
 
 </html>
